# andymd

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: release-macos.yml
docs/: ios.md
docs/features-auto-update/: plan.md  spec.md
docs/features-collab/: spec.md
docs/features-multi-tabs/: spec.md
docs/features-toolbar/: spec.md
docs/features-whats-new/: plan.md  spec.md
docs/features-whatsnew-upgrade-popup/: spec.md
scripts/: gen_icon.py  release-dmg.mjs  release-update.mjs  set-version.mjs  smoke-test.sh
server/: Dockerfile  README.md  index.mjs  package-lock.json  package.json
src/: App.tsx  buildInfo.ts  featureFlags.ts  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs  watcher.rs
src-tauri/src/commands/: backlinks_cmd.rs  config_cmd.rs  fs_cmd.rs  mod.rs  version_cmd.rs  workspace_cmd.rs
src/collab/: collabSession.ts  collabStore.ts  cursor.ts  identity.test.ts  identity.ts  roomCode.test.ts  roomCode.ts
src/components/: OpenFileDialog.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx  Tour.tsx  UpdateButton.test.tsx  UpdateButton.tsx  UpdateSettings.tsx  VersionHistory.tsx  WhatsNew.test.tsx  WhatsNew.tsx
src/hooks/: useOpenFileRequest.ts  useShortcuts.test.tsx  useShortcuts.ts  useTheme.ts  useWorkspaceWatcher.ts
src/lib/: asset.test.ts  asset.ts  autoPair.test.ts  autoPair.ts  changelog.test.ts  changelog.ts  config-defaults.test.ts  docStats.test.ts  docStats.ts  exportHtml.test.ts  exportHtml.ts  frontmatter.test.ts  frontmatter.ts  image.test.ts  image.ts  inlineMarkdown.test.tsx  inlineMarkdown.tsx  linkTarget.test.ts  linkTarget.ts  markdown.test.ts  markdown.ts  outline.test.ts  outline.ts  platform.ts  quickOpen.test.ts  quickOpen.ts  search.test.ts  search.ts  updateToken-default.test.ts  updater.test.ts  updater.ts  whatsNew.ts  wikilink.test.ts  wikilink.ts  wordCount.test.ts  wordCount.ts  workspacePath.test.ts  workspacePath.ts
src/services/: configService.ts  dialogService.ts  fsService.test.ts  fsService.ts  linkService.test.ts  linkService.ts  menuService.ts  versionService.ts  wikilinkService.ts
src/stores/: configStore.test.ts  configStore.ts  documentStore.test.ts  documentStore.ts  uiStore.test.ts  uiStore.ts  (+4 more)
(+74 files in other folders)
