[package]
name = "typora_clone"
version = "0.1.0"
description = "Typora Clone"
authors = ["andy.zhanggx"]
edition = "2021"

[lib]
name = "typora_clone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
