[package]
name = "typora_clone"
version = "0.1.0"
description = "Typora Clone"
authors = ["andy.zhanggx"]
edition = "2021"

[lib]
name = "typora_clone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
notify = "6"
trash = "4"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "sync"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
