[package]
name = "andymd"
version = "0.2.0"
description = "AndyMD"
authors = ["andy.zhanggx"]
edition = "2021"

[lib]
name = "andymd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4"] }
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

# Desktop-only crates. iOS/Android can't compile these: `trash` and `notify`
# target desktop file managers / inotify-style backends, and the updater +
# process plugins are desktop concepts (mobile apps update via the App Store and
# can't relaunch themselves). All code using them is `#[cfg(desktop)]`-gated.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
notify = "6"
trash = "4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
